[tool.poetry]
name = "project-iv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "project_iv"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
